--- a/app/src/main/res/layout/activity_main_new.xml
+++ b/app/src/main/res/layout/activity_main_new.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cl_main"
@@ -7,64 +7,117 @@
     android:layout_height="match_parent"
     android:background="@color/primary_app">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <FrameLayout
+        android:id="@+id/ll_top_parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/primary_app"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UseCompoundDrawables">
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/primary_app">
+        <ImageView
+            android:id="@+id/iv_menu"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:padding="10dp"
+            android:src="@drawable/ic_menu"
+            android:tint="@color/bg_bottom_menu_unselected"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/tb_main"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tv_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/drawable_rectangle_start"
+            android:paddingStart="20dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="5dp"
+            android:text="@string/text_register"
+            android:textColor="@android:color/white"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/iv_menu"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/iv_menu"
+            tools:visibility="visible" />
 
-            <FrameLayout
-                android:id="@+id/fl_container"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tb_main" />
+    </FrameLayout>
 
-            <ImageView
-                android:id="@+id/iv_notifications"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
-                android:src="@drawable/ic_notifications"
-                android:tint="@color/primary_icon"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="@id/tb_main"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tb_main"
-                tools:ignore="ContentDescription" />
+    <FrameLayout
+        android:id="@+id/fl_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/ll_bottom"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_top_parent" />
 
-            <TextView
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:background="@drawable/drawable_circle_red"
-                android:gravity="center"
-                android:includeFontPadding="false"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
-                android:visibility="gone"
-                app:layout_constraintCircle="@id/iv_notifications"
-                app:layout_constraintCircleAngle="45"
-                app:layout_constraintCircleRadius="15dp"
-                tools:ignore="MissingConstraints"
-                tools:text="3" />
+    <LinearLayout
+        android:id="@+id/ll_bottom"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:background="@drawable/drawable_rectangle_bottom_menu"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fl_container">
 
-        </android.support.constraint.ConstraintLayout>
+        <dev.kxxcn.app_with.util.BottomMenuView
+            android:id="@+id/bmv_home"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:bmv_icon="@drawable/ic_bottom_home" />
 
-    </android.support.design.widget.AppBarLayout>
+        <dev.kxxcn.app_with.util.BottomMenuView
+            android:id="@+id/bmv_time"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:bmv_icon="@drawable/ic_bottom_time" />
 
-    <include layout="@layout/item_navigation" />
+        <dev.kxxcn.app_with.util.BottomMenuView
+            android:id="@+id/bmv_plan"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:bmv_icon="@drawable/ic_bottom_plan" />
 
-</android.support.v4.widget.DrawerLayout>
+        <dev.kxxcn.app_with.util.BottomMenuView
+            android:id="@+id/bmv_record"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="gone"
+            app:bmv_icon="@drawable/ic_bottom_record" />
+
+        <dev.kxxcn.app_with.util.BottomMenuView
+            android:id="@+id/bmv_write"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:bmv_icon="@drawable/ic_bottom_write" />
+
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/fl_menu"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</android.support.constraint.ConstraintLayout>
