--- a/app/src/main/res/layout/fragment_new_write.xml
+++ b/app/src/main/res/layout/fragment_new_write.xml
@@ -47,7 +47,7 @@
             android:id="@+id/tv_write"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginStart="20dp"
             android:fontFamily="@font/namsan"
             android:paddingStart="0dp"
             android:paddingEnd="10dp"
