--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -14,7 +14,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/namsan"
-            android:padding="20dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="20dp"
             android:text="@string/text_timeline"
             android:textColor="@android:color/black"
             android:textSize="35sp"
@@ -34,10 +36,11 @@
             android:paddingEnd="30dp"
             android:paddingBottom="10dp"
             android:textColor="@android:color/white"
-            app:layout_constraintBottom_toBottomOf="@id/tv_title"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_title"
-            tools:text="YOU" />
+            tools:text="YOU"
+            tools:visibility="visible" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_timeline"
