--- a/app/src/main/res/layout/activity_wrap.xml
+++ b/app/src/main/res/layout/activity_wrap.xml
@@ -61,4 +61,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ll_top_parent" />
 
+    <FrameLayout
+        android:id="@+id/fl_success"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/background_add_plan_possible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lav_done"
+        style="@style/FillConstraintParent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:lottie_autoPlay="false"
+        app:lottie_fileName="done.json"
+        app:lottie_loop="false"
+        tools:ignore="MissingConstraints"
+        tools:visibility="visible" />
+
 </android.support.constraint.ConstraintLayout>
