--- a/app/src/main/res/layout/fragment_new_setting.xml
+++ b/app/src/main/res/layout/fragment_new_setting.xml
@@ -328,7 +328,8 @@
                 android:id="@+id/cl_sign_out"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp">
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp">
 
                 <ImageView
                     android:id="@+id/iv_logout_bg"
