--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,8 +14,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cl_intro"
-        tools:visibility="visible">
+        app:layout_constraintTop_toBottomOf="@id/cl_intro">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -144,7 +143,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:visibility="visible">
 
         <EditText
             android:id="@+id/et_write"
@@ -199,17 +199,19 @@
         <TextView
             android:id="@+id/tv_auth2"
             style="@style/WithTextView"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="0dp"
+            android:padding="20dp"
             android:text="@string/text_auth3"
             android:textColor="@android:color/black"
             android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_line2" />
 
         <TextView
             android:id="@+id/tv_create"
             style="@style/WithTextView"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/drawable_rectangle_start"
             android:gravity="center"
@@ -220,15 +222,15 @@
             android:text="@string/text_create"
             android:textColor="@android:color/white"
             android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="@id/tv_auth2"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_auth2" />
 
         <View
             android:id="@+id/view_under_line_write"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:background="@color/background_add_plan_possible"
             app:layout_constraintBottom_toBottomOf="@id/et_write"
