--- a/app/src/main/res/layout/item_view_empty.xml
+++ b/app/src/main/res/layout/item_view_empty.xml
@@ -35,6 +35,7 @@
         android:id="@+id/tv_no_data"
         style="@style/WithTextView"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:gravity="center"
         android:textColor="@color/day_background2"
         android:textSize="16sp"
