--- a/app/src/main/res/layout/fragment_decimal.xml
+++ b/app/src/main/res/layout/fragment_decimal.xml
@@ -11,7 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/namsan"
-        android:padding="20dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="20dp"
         android:text="@string/text_dday"
         android:textColor="@android:color/black"
         android:textSize="35sp"
