--- a/app/src/main/res/layout/fragment_new_setting.xml
+++ b/app/src/main/res/layout/fragment_new_setting.xml
@@ -10,7 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/namsan"
-        android:padding="20dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="20dp"
         android:text="@string/text_setting"
         android:textColor="@android:color/black"
         android:textSize="35sp"
