--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -10,7 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/namsan"
-        android:padding="20dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="20dp"
         android:text="@string/text_statistic"
         android:textColor="@android:color/black"
         android:textSize="35sp"
@@ -31,7 +33,6 @@
         android:paddingBottom="10dp"
         android:textColor="@android:color/white"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/tv_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_title"
         tools:text="YOU"
