--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -189,6 +189,7 @@
     <color name="day_background8">#d2b4e6</color>
     <color name="day_background9">#92d8e2</color>
     <color name="day_background10">#c0e2f7</color>
+    <color name="day_background11">#b2a1bc</color>
 
     <color name="bar_background">#3f5ff9</color>
 
