--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -254,13 +254,12 @@
         <item name="tbOnColor">@color/background_setting_notification</item>
     </style>
 
-
     <style name="BackImageButton" parent="Base.Widget.AppCompat.ImageButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_marginStart">20dp</item>
-        <item name="android:background">@drawable/ic_arrow_back</item>
+        <item name="android:background">@drawable/ic_arrow_rotate_back</item>
     </style>
 
     <style name="PasswordTextView" parent="@android:style/Widget.TextView">
