--- a/app/src/main/res/layout/activity_wrap.xml
+++ b/app/src/main/res/layout/activity_wrap.xml
@@ -19,13 +19,13 @@
 
         <ImageView
             android:id="@+id/iv_back"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:padding="10dp"
-            android:src="@drawable/ic_back"
+            android:src="@drawable/ic_arrow_rotate_back"
             android:tint="@color/primary_icon"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
