--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -24,12 +24,12 @@
             android:id="@+id/tv_preview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_margin="10dp"
             android:layout_weight="2"
             android:alpha="0"
             android:ellipsize="end"
             android:gravity="center"
-            android:maxLines="5"
-            android:padding="10dp" />
+            android:maxLines="4" />
 
         <TextView
             android:id="@+id/tv_more"
