--- a/app/src/main/res/layout/fragment_new_setting.xml
+++ b/app/src/main/res/layout/fragment_new_setting.xml
@@ -97,7 +97,7 @@
                     android:id="@+id/iv_lock_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_setting_lock"
+                    android:src="@drawable/ic_setting_general"
                     android:tint="@android:color/white"
                     app:layout_constraintBottom_toBottomOf="@id/iv_lock_bg"
                     app:layout_constraintEnd_toEndOf="@id/iv_lock_bg"
@@ -111,7 +111,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:text="@string/text_lock"
+                    android:text="@string/text_general"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="@id/iv_lock_bg"
                     app:layout_constraintStart_toEndOf="@id/iv_lock_bg"
