--- a/app/src/main/res/layout/activity_detail_regacy.xml
+++ b/app/src/main/res/layout/activity_detail_regacy.xml
@@ -1,64 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/ll_preview"
-        style="@style/FillConstraintParent"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+    <ImageView
+        android:id="@+id/iv_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        tools:ignore="ContentDescription" />
 
-        <com.github.chrisbanes.photoview.PhotoView
-            android:id="@+id/pv_background"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8" />
-
-        <TextView
-            android:id="@+id/tv_preview"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="10dp"
-            android:layout_weight="2"
-            android:alpha="0"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:lineSpacingExtra="10dp"
-            android:maxLines="4" />
-
-        <TextView
-            android:id="@+id/tv_more"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/drawable_rectangle_notify_notice"
-            android:paddingStart="20dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="20dp"
-            android:paddingBottom="10dp"
-            android:text="@string/text_show_detail"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            tools:ignore="ContentDescription" />
-
-    </LinearLayout>
-
-    <ScrollView
-        android:id="@+id/sv_content"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:alpha="0"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_back">
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:alpha="0.0"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="10dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -127,21 +92,22 @@
             <TextView
                 android:id="@+id/tv_letter"
                 style="@style/WithTextView"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lineSpacingExtra="10dp"
+                android:maxHeight="400dp"
+                android:minHeight="100dp"
                 android:padding="20dp"
                 android:scrollbars="vertical"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/view_divider" />
 
         </android.support.constraint.ConstraintLayout>
 
-    </ScrollView>
+    </android.support.v7.widget.CardView>
 
     <ImageView
         android:id="@+id/iv_back"
@@ -150,8 +116,6 @@
         android:padding="20dp"
         android:src="@drawable/ic_arrow_rotate_back"
         android:tint="@android:color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
     <ImageView
@@ -173,8 +137,8 @@
     <FrameLayout
         android:id="@+id/fl_loading"
         style="@style/FillConstraintParent"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#B3000000"
         android:visibility="gone"
         tools:ignore="MissingConstraints">
@@ -186,4 +150,4 @@
 
     </FrameLayout>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
